--- a/home.css
+++ b/home.css
@@ -177,6 +177,10 @@ color:rgb(177, 2, 2)
     width:50px
 }
 @media(max-width:952px){
+   .whatsapplogo{
+       height:50px;
+       width:50px
+    }
     .whatsapp{
         position: fixed;
         right:0px;
