--- a/spice.css
+++ b/spice.css
@@ -547,6 +547,7 @@ a.active:visited{
         width: 140px;
         padding: 0 0 0 3px;
         margin: 4px 0 0 30px;
+	height:30px
     }
 
     .table-align-spicebtn{
